<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".setplayers"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:layout_weight="2"
        android:text="@string/Title"
        android:textSize="@dimen/title_size"
        />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/player1"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:id="@+id/player1"
        />
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/player2"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:id="@+id/player2"

        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ENG"
            android:id="@+id/checkenglish"
            android:onClick="setlanguage"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NL"
            android:id="@+id/checkdutch"
            android:onClick="setlanguage"
            android:checked="true" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/StartGame"
        android:id="@+id/btnStartgame"
        android:layout_margin="10dp"
        />

</LinearLayout>