<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".welcome"
    android:gravity="center|bottom"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/title_activity_welcome"
        android:textSize="@dimen/title_size"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/language_question"
        android:textSize="@dimen/title_size"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/NL"
            android:id="@+id/NL"
            android:onClick="Clicked"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ENG"
            android:id="@+id/EN"
            android:onClick="Clicked"
            />

    </LinearLayout>


</LinearLayout>