<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center|bottom"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/Title"
        android:textSize="@dimen/title_size"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ghost_background"
        android:id="@+id/background"
        android:layout_weight="4"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/StartGame"
        android:id="@+id/buttonstartgame"
        android:textSize="@dimen/buttonmainsize"
        android:onClick="buttonClicked"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Highscores"
        android:id="@+id/buttonhighscores"
        android:textSize="@dimen/buttonmainsize"
        android:onClick="buttonClicked"
        />

</LinearLayout>
